--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.3.0",
     "express-session": "^1.17.3",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "request-ip": "^3.3.0"
   }
 }
