--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.3.0",
     "express-session": "^1.17.3",
+    "joi": "^17.13.3",
     "pg": "^8.11.3",
     "request-ip": "^3.3.0"
   }
